--- a/ProMgt.Client/_Imports.razor
+++ b/ProMgt.Client/_Imports.razor
@@ -16,3 +16,12 @@
 @using MudExtensions.Utilities
 @using ProMgt.Client.Infrastructure.Settings
 @using FluentValidation
+@using Microsoft.AspNetCore.Authorization
+@using ProMgt.Client.Components
+@using ProMgt.Client.Components.Dialogs
+@using ProMgt.Client.Components.Project
+@using ProMgt.Client.Models
+@using ProMgt.Client.Models.AuthModels
+@using ProMgt.Client.Models.Project
+@using ProMgt.Client.Models.Task
+
