--- a/ProMgt/Components/App.razor
+++ b/ProMgt/Components/App.razor
@@ -44,5 +44,5 @@
 
     private IComponentRenderMode? RenderModeForPage => HttpContext.Request.Path.StartsWithSegments("/Account")
         ? null
-        : InteractiveAuto;
+        : InteractiveWebAssembly;
 }
