--- a/ProMgt.Client/Layout/NavMenu.razor
+++ b/ProMgt.Client/Layout/NavMenu.razor
@@ -9,6 +9,7 @@
     <MudNavLink Href="auth" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Lock">Auth Required</MudNavLink>
     <AuthorizeView>
         <Authorized>
+            <MudNavLink Href="/project/create" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Create Project</MudNavLink>
             <MudNavLink Href="Account/Manage" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Person">@context.User.Identity?.Name</MudNavLink>
             <form action="Account/Logout" method="post">
                 <AntiforgeryToken />
