feat: complete dashboard implementation

--- a/ProMgt.Client/Components/Dialogs/AddTaskDialog.razor
+++ b/ProMgt.Client/Components/Dialogs/AddTaskDialog.razor
@@ -26,7 +26,7 @@
                               @bind-Value="NewTask.Name" />
             </MudItem>
             <MudItem Class="mb-4">
-                <MudDatePicker Label="Project end date"
+                <MudDatePicker Label="Task end date"
                                For="@(()=>NewTask.DeadLine)"
                                @bind-Date="NewTask.DeadLine" />
             </MudItem>
