--- a/ProMgt.Client/_Imports.razor
+++ b/ProMgt.Client/_Imports.razor
@@ -29,4 +29,7 @@
 @using ProMgt.Client.Pages.Generics.Shared
 @using ProMgt.Client.Models.Fields.Priority
 @using ProMgt.Client.Models.Fields.TaskStatus
+@using ProMgt.Client.Models.Section
+@using ProMgt.Client.Components.Task.TaskStatistics
+
 
